--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -83,7 +83,22 @@
 			<br>Seule la commande de livres imprimés est payante (Boutique).<span></caption>    
 				 <br>
 	
-	
+				    <tr>
+	                <td width="225" id="imagesdesbd">
+			            <a id="danslebetoncouv" rel="couverturemamostedin" href="plagiat_ed_BD_dans_le_beton.html">
+			            <img src="image_site/Dans-le-béton__MamosteDin.jpg" alt="Dans_le_beton/mamoste_din" width="180" height="auto" /></a>
+			        </td>
+				
+					
+	                <td width="350" id="textesdesbd">
+					<p><span><i><br>Dans le béton</i><span></p>
+					<p><span>de Mamoste Dîn<span></p>
+					<a href="https://drive.google.com/uc?id=1FYOFv4rgW5oksImJOhuZWTB_GORQJx8F" title="Pdf">
+					<p><span><u>Dans le béton de&#8239;Mamoste&#8239;Dîn(.pdf)</u></a><span></p>
+					<a href="https://grandpapier.org/mamoste-din/" title="cliquer">
+					<br>En français sur Gand Papier</a><span></p>
+
+			        </td>
 	<tr>
 	                <td width="225" id="imagesdesbd">
 			            <a id="Le présischtroumpf1" rel="couverturedétournement" href="plagiat_ed_BD_le_présischtroumpf_détournement.html">
@@ -117,8 +132,6 @@
 					<p><span><u>Ne pas mourir comme des chiens de&#8239;Mamoste&#8239;Dîn(.pdf)</u></a><span></p>
 					<a href="https://drive.google.com/uc?id=1J-naX-y-enJP2eQtpCgoZ0Selw46hz40" title="Pdf">
 					<p><span><u>We won't die the dog’s death by Mamoste&#8239;Dîn(eng.pdf)</u></a><span></p>
-					<a href="https://drawingthetimes.com/authors/margot-gustaedt/" title="cliquer">
-					<p>Disponible aussi en anglais sur Drawing the times</a>
 					<a href="https://visionscarto.net/ne-pas-mourir-comme-des-chiens" title="cliquer">
 					<br>En français sur VisionCarto </a>
 					<a href="plagiat_ed_BD_entretien-Mamoste.html" title="cliquer">
