--- a/plagiat_ed_BD_dans_le_beton.html
+++ b/plagiat_ed_BD_dans_le_beton.html
@@ -78,11 +78,8 @@
 	  <br><cite id="resume"><span>Il est six heures. Alberto Conti se rend au travail, ses écou-
 teurs plantés dans les oreilles comme tous les matins,
 quand il se retrouve happé par une émission de radio
-relatant un braquage mené par deux hommes en trot-
-tinette électrique. Un témoin raconte les événements
-incroyables qui se sont déroulés sous ses yeux et l’arres-
-tation des différents protagonistes. Mais ce récit anecdo-
-tique, surprenant et burlesque prend une autre dimension
+relatant un braquage mené par deux hommes en trottinette électrique. Un témoin raconte les événements
+incroyables qui se sont déroulés sous ses yeux et l’arrestation des différents protagonistes. Mais ce récit anecdotique, surprenant et burlesque prend une autre dimension
 quand Alberto arrive sur son lieu de travail où il découvre
 la disparition de deux de ses collègues.</cite><span>
             <br>
