--- a/plagiat_ed_BD_dans_le_beton.html
+++ b/plagiat_ed_BD_dans_le_beton.html
@@ -3,7 +3,7 @@
 <head>
 <title>Editions Plagiat bd/Ne-pas-mourir-comme-des-chiens/mamoste-din</title>  
 <link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
-<meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. Ne pas mourir comme des chiens, roman graphique, bande dessinée, de Mamoste Dîn, lecture en ligne." />
+<meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. Dans le Béton, roman graphique, bande dessinée, de Mamoste Dîn, lecture en ligne." />
 <link rel="stylesheet" href="plagiat_ed_BD_dans_le_beton.css" />
 </head>
 <body>
