--- a/plagiat_ed_BD_le_présischtroumpf_détournement.html
+++ b/plagiat_ed_BD_le_présischtroumpf_détournement.html
@@ -3,7 +3,7 @@
 <head>
 <title>Editions Plagiat BD</title>  
 <link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
-<meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. BD, Roman Graphique, Lecture en ligne." />
+<meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. Le presischtroumpf, BD, Roman Graphique, Lecture en ligne." />
 <link rel="stylesheet" href="plagiat_ed_BD_le_présischtroumpf_détournement.css" />
 </head>
 <body>
