--- a/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
+++ b/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
@@ -106,7 +106,7 @@ quand Alberto arrive sur son lieu de travail où il découvre la disparition de 
 				
 					<p><span><i>Dans le béton</i><br>
 					<span>de Mamoste Dîn
-					<br>Achevé d'imprimer en mars 2023 en Italie</p>
+					<br>Achevé d'imprimer à l'été 2023 en Italie</p>
 					<p><span><b>prix 12 euros</b>,  + 3,50 euros de frais de port par ouvrage<span></p>
 
 					<p><span>Editions Plagiat
