--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -272,7 +272,8 @@
 				<p><span><h3><br>Bandes dessinées</h3><span></p>
 					
 				<p><span>DÎN, Mamoste<br>
-					
+					<a href="https://drive.google.com/uc?id=1FYOFv4rgW5oksImJOhuZWTB_GORQJx8F" title="Pdf">
+					<p><span><u>Dans le béton de&#8239;Mamoste&#8239;Dîn(.pdf)</u></a><span></p>
 					<a href="https://drive.google.com/uc?id=1IJDMCqb5Z2aRoM-MpzzzeRcTengIptag" title="Pdf">
 					<u>Ne pas mourir comme des chiens de&#8239;Mamoste&#8239;Dîn(.pdf)</u></a></i></span></p>
 				<p><span>G.R.C. (Groupe Révolutionnaire Charlatan)<br>
