--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -273,7 +273,7 @@
 					
 				<p><span>DÎN, Mamoste<br>
 					<a href="https://drive.google.com/uc?id=1FYOFv4rgW5oksImJOhuZWTB_GORQJx8F" title="Pdf">
-					<p><span><u>Dans le béton de&#8239;Mamoste&#8239;Dîn(.pdf)</u></a><span></p>
+					<u>Dans le béton de&#8239;Mamoste&#8239;Dîn(.pdf)</u></a>
 					<a href="https://drive.google.com/uc?id=1IJDMCqb5Z2aRoM-MpzzzeRcTengIptag" title="Pdf">
 					<u>Ne pas mourir comme des chiens de&#8239;Mamoste&#8239;Dîn(.pdf)</u></a></i></span></p>
 				<p><span>G.R.C. (Groupe Révolutionnaire Charlatan)<br>
