--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -100,6 +100,9 @@
 					      <u><i>L'armée esclave et opprimée</i>1872</u></span></a><br>	
 					<a title="Usure" href="https://www.marxists.org/francais/blanqui/1869/usure.htm">
 					      <u><i>Usure</i>1872</u></span></a><br>	
+				<p><span>BORGELLA, Frederic Pierre<br>
+			        	<a title="Justice!" href="https://books.google.fr/books?id=oVINzgEACAAJ&printsec=frontcover&hl=fr&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false">
+					      <u><i>Justice ! par un officier d'artillerie de l'armée de Paris, Numéros 1 à 2(.pdf)</i></u></span></a><br>	
 				<p><span>CANJUERS, Pierre (Daniel Blanchard)
 					<br><a href="http://debordiana.chez.com/francais/preliminaires.htm" title="Préliminaires pour une définition de l’unité du programme révolutionnaire">
 					<u><i>Préliminaires pour une définition de l’unité du programme révolutionnaire </i></u></a></span></p>
