--- a/plagiat_ed_miscellanees_affiches.html
+++ b/plagiat_ed_miscellanees_affiches.html
@@ -74,66 +74,31 @@ Affiches et gravures politiques de notre siècle
 
 Affiches et gravures vues par-ci par-là...</cite><span>
             <br>
-	<br>
+	<br>		 <a id="partieune">
+				<img src="image_site/affichechiens.jpg" alt="" width="850" height="auto" />
+			</a> 
+
 		 <a id="partieune">
-				<img src="image_site/" alt="" width="850" height="auto" />
+				<img src="image_site/afficheHM.jpg" alt="" width="850" height="auto" />
 			</a> 
-         <a id="partie2">
-				<img src="https://drive.google.com/uc?id=1qRpiKwi-p2JKlXzCUh86r9dsHaNrPeui" alt="Le présischtroumpf" width="850" height="auto" />
-			</a>
-         <a id="partie3">
-				<img src="https://drive.google.com/uc?id=1qu1Dy1QCPNnJk6Ocbv_-QTmso_eAWBiI" alt="Le présischtroumpf" width="850" height="auto" />
-			</a>
-	 <a id="partie5">
-				<img src="https://drive.google.com/uc?id=1_Hgmlotnup0VGvqIP67B1QPYVK77vxeT" alt="Le présischtroumpf" width="850" height="auto" />
-		 </a> 
-         <a id="partie4">
-				<img src="https://drive.google.com/uc?id=1ZTOi9uepcJioJtYeZyJ1aOl9qF3TjBYx" alt="Le présischtroumpf" width="850" height="auto" />
-			</a>	
+		 <a id="partieune">
+				<img src="image_site/affiches2.jpg" alt="" width="850" height="auto" />
+			</a> 
+	
+		 <a id="partieune">
+				<img src="image_site/fusil à pompe.jpg" alt="" width="850" height="auto" />
+			</a> 
+		 <a id="partieune">
+				<img src="image_site/criminalité.jpg" alt="" width="850" height="auto" />
+			</a> 
+	
+		 <a id="partieune">
+				<img src="image_site/affichetolbiac.jpg" alt="" width="850" height="auto" />
+			</a> 
 
-         <a id="partie6">
-				<img src="https://drive.google.com/uc?id=1OJ01vo-Yz6IjLEjTp-DQO6VZLisELSyo" alt="Le présischtroumpf" width="850" height="auto" />
-			</a>
-         <a id="partie7">
-				<img src="https://drive.google.com/uc?id=17oE85eTo_qAJeNyNKHNjMGutPAmXQsBQ" alt="Le présischtroumpf" width="850" height="auto" />
-			</a>
-         <a id="partie8">
-				<img src="https://drive.google.com/uc?id=12OIQsXbrliOdFqygjTi9wSbsrpCFJYG-" alt="Le présischtroumpf" width="850" height="auto" />
-			</a>
-          <a id="partie9">
-				<img src="https://drive.google.com/uc?id=1AK6NiGOV7O4gWGAifzUBBckDBPMqJgtp" alt="Le présischtroumpf" width="850" height="auto" />
+		 <a id="partieune">
+				<img src="image_site/affiche120.jpg" alt="" width="850" height="auto" />
 			</a> 
-         <a id="partie10">
-				<img src="https://drive.google.com/uc?id=1v-VlPdIW3Ct95rDepcKdMAWIy5zqC32f" alt="Le présischtroumpf" width="850" height="auto" />
-			</a>
-         <a id="partie11">
-				<img src="https://drive.google.com/uc?id=1NBa0kR8_uQtRdDVfvZzJa-d9_pTWCddz" alt="Le présischtroumpf" width="850" height="auto" />
-			</a>
-         <a id="partie12">
-				<img src="https://drive.google.com/uc?id=1yFzASe-uh3Jfrfo4n2eIhy8dLxPmVpgz" alt="Le présischtroumpf" width="850" height="auto" />
-				
-         <a id="partieune">
-				<img src="https://drive.google.com/uc?id=1uWi_iHdXz85FqnHuvv3AVZtf10joCTb3" alt="Le présischtroumpf" width="850" height="auto" />
-			</a> 
-         <a id="partie2">
-				<img src="https://drive.google.com/uc?id=1rYYR3Ewdn0xjmrminW7YG5gmzkq7jNBY" alt="Le présischtroumpf" width="850" height="auto" />
-			</a>
-         <a id="partie3">
-				<img src="https://drive.google.com/uc?id=1tbNL-n-j5j57l-XvybI3PsxvmucTLINo" alt="Le présischtroumpf" width="850" height="auto" />
-			</a>
-         <a id="partie4">
-				<img src="https://drive.google.com/uc?id=1fm9Ki94VXaZSgoRwEgTnuS-I9a4CzLnp" alt="NLe présischtroumpf" width="850" height="auto" />
-			</a>	
-          <a id="partie5">
-				<img src="https://drive.google.com/uc?id=1f9NCEfWrUaVmx51p7VNhTO1EWgu0nDl_" alt="Le présischtroumpf" width="850" height="auto" />
-			</a> 
-         <a id="partie6">
-				<img src="https://drive.google.com/uc?id=1jVCvqvjHi04oe91spRSxZOKB_0P1oIPB" alt="Le présischtroumpf" width="850" height="auto" />
-			</a>
-         <a id="partie7">
-				<img src="https://drive.google.com/uc?id=1OTsN0rt1RUHyfTR-V_X75VA5cIC6vZoB" alt="Le présischtroumpf" width="850" height="auto" />
-			</a>
-
 
 </div>
 
