--- a/plagiat_ed_miscellanees_affiches.html
+++ b/plagiat_ed_miscellanees_affiches.html
@@ -70,9 +70,9 @@
   <div class="col-6 col-s-9">
 
     
-Affiches et gravures politiques de notre siècle 
+<p><span><b></b>Affiches et gravures politiques de notre siècle </b><br>
 
-Affiches et gravures vues par-ci par-là...</cite><span>
+Affiches et gravures vues par-ci par-là...</p><span>
             <br>
 	<br>		 <a id="partieune">
 				<img src="image_site/affichechiens.jpg" alt="" width="850" height="auto" />
