--- a/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
+++ b/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
@@ -98,7 +98,7 @@ quand Alberto arrive sur son lieu de travail où il découvre la disparition de 
 			    		        </td>
 			        <td height="250" id="imagesdesbd"><br>
 				    <a id="danslebéton_mamoste_din" rel="catalogue/boutique">
-			            <img src="image_site/bd2.jpg" alt="danslebeton_livre_mamoste_din" width="250" height="250" /></a>
+			            <img src="image_site/verso012.jpg" alt="danslebeton_livre_mamoste_din" width="250" height="250" /></a>
 			        </td>
 				
 			    <tr/>					
@@ -107,7 +107,7 @@ quand Alberto arrive sur son lieu de travail où il découvre la disparition de 
 					<p><span><i>Dans le béton</i><br>
 					<span>de Mamoste Dîn
 					<br>Achevé d'imprimer à l'été 2023 en Italie</p>
-					<p><span><b>prix 12 euros</b>,  + 3,50 euros de frais de port par ouvrage<span></p>
+					<p><span><b>prix 12 euros</b>,  + 3,50 euros de frais de port<span></p>
 
 					<p><span>Editions Plagiat
 					<br>ISBN : 978-2-492221-05-7 <br>
