--- a/plagiat_ed_miscellanées.html
+++ b/plagiat_ed_miscellanées.html
@@ -76,11 +76,23 @@
 	<br>
 	<br>
 			<caption><span><h3>Inclassables,  fragments, autres...<span></caption>    
-	  
+
+	    <tr>
+	                <td width="200" id="affiche"><br>
+			                <a id="Carrousel" rel="article" href="plagiat_ed_miscellanees_affiches.html">
+			                <img src="image_site/fusil à pompe.jpg" alt="" width="200" height="auto" /></a>
+			            </td>
+	                    <td width="325" id="affiches_gravures">
+						<p><span>Affiches et gravures politiques de notre siècle<span></p>
+                            <p><span>Editions Plagiat 2023 à ...<span></p> 
+
+			            </td>
+		            </tr>
+				
 	    <tr>
 	                <td width="200" id="illu1937"><br>
 			                <a id="Carrousel" rel="article" href="plagiat_ed_miscellanees_commune_archives.html">
-			                <img src="    image_site/phototele-1208584_0.jpg" alt="Carrousel" width="200" height="auto" /></a>
+			                <img src="image_site/phototele-1208584_0.jpg" alt="Carrousel" width="200" height="auto" /></a>
 			            </td>
 	                    <td width="325" id="commune_archives">
 						<p><span>Corpus de références sur:<br>La Commune de Paris (1871)<span></p>
