--- a/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
+++ b/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
@@ -98,7 +98,7 @@ quand Alberto arrive sur son lieu de travail où il découvre la disparition de 
 			    		        </td>
 			        <td height="250" id="imagesdesbd"><br>
 				    <a id="danslebéton_mamoste_din" rel="catalogue/boutique">
-			            <img src="image_site/verso012.jpg" alt="danslebeton_livre_mamoste_din" width="250" height="250" /></a>
+			            <img src="image_site/verso012.jpg" alt="danslebeton_livre_mamoste_din" height="250" width="auto" /></a>
 			        </td>
 				
 			    <tr/>					
