--- a/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
+++ b/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
@@ -94,11 +94,11 @@ quand Alberto arrive sur son lieu de travail où il découvre la disparition de 
 			    <tr>
 			        <td height="250" id="imagebd"><br>
       				<a id="danslebeton" rel="catalogue/boutique">
-			            <img src="image_site/Dans-le-béton__MamosteDin.jpg" alt="Bans_le_beton_de_mamoste_din"  height="250" width="auto" /></a>
+			            <img src="image_site/couvdanslebeton014.jpg" alt="Bans_le_beton_de_mamoste_din" width="auto" height="250"  /></a>
 			    		        </td>
 			        <td height="250" id="imagesdesbd"><br>
 				    <a id="danslebéton_mamoste_din" rel="catalogue/boutique">
-			            <img src="image_site/verso012.jpg" alt="danslebeton_livre_mamoste_din" height="250" width="auto" /></a>
+			            <img src="image_site/verso012.jpg" alt="danslebeton_livre_mamoste_din" width="auto" height="250" /></a>
 			        </td>
 				
 			    <tr/>					
