--- a/plagiat_ed_boutique.html
+++ b/plagiat_ed_boutique.html
@@ -102,7 +102,7 @@
 								   <tr>
 			        <td width="200" id="imagesbd"><br>
 				            <a id="danslebetoncouv" rel="couverturemamostedin" href="plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html">
-			            <img src="image_site/Dans-le-béton__MamosteDin.jpg" alt="Dans_le_beton/mamoste_din" width="180" height="auto" /></a>
+			            <img src="image_site/couvdanslebeton014.jpg" alt="Dans_le_beton/mamoste_din" width="180" height="auto" /></a>
 			        </td>
 				
 					
