--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -86,7 +86,7 @@
 				    <tr>
 	                <td width="225" id="imagesdesbd">
 			            <a id="danslebetoncouv" rel="couverturemamostedin" href="plagiat_ed_BD_dans_le_beton.html">
-			            <img src="image_site/Dans-le-béton__MamosteDin.jpg" alt="Dans_le_beton/mamoste_din" width="180" height="auto" /></a>
+			            <img src="image_site/couvdanslebeton014.jpg" alt="Dans_le_beton/mamoste_din" width="180" height="auto" /></a>
 			        </td>
 				
 					
