--- a/plagiat_ed_BD_dans_le_beton.html
+++ b/plagiat_ed_BD_dans_le_beton.html
@@ -83,7 +83,7 @@ quand Alberto arrive sur son lieu de travail où il découvre la disparition de 
             <br>
 	<br>
 		 <a id="partieune">
-				<img src="image_site/couvdanslebeton014.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="image_site/Dans-le-béton__MamosteDin.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
          <a id="partie2">
 		 		<a href="https://zupimages.net/viewer.php?id=23/27/4wri.jpg"><img src="https://zupimages.net/up/23/27/4wri.jpg" alt="" /></a>
