--- a/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
+++ b/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
@@ -92,13 +92,13 @@ quand Alberto arrive sur son lieu de travail où il découvre la disparition de 
  
 <table>
 			    <tr>
-			        <td height="250" id="imagebd"><br>
+			        <td width="250" id="imagebd"><br>
       				<a id="danslebeton" rel="catalogue/boutique">
-			            <img src="image_site/couvdanslebeton014.jpg" alt="Bans_le_beton_de_mamoste_din" width="auto" height="250"  /></a>
+			            <img src="image_site/couvdanslebeton014.jpg" alt="Bans_le_beton_de_mamoste_din" width="250" height="auto"  /></a>
 			    		        </td>
-			        <td height="250" id="imagesdesbd"><br>
+			        <td width="250" id="imagesdesbd"><br>
 				    <a id="danslebéton_mamoste_din" rel="catalogue/boutique">
-			            <img src="image_site/verso012.jpg" alt="danslebeton_livre_mamoste_din" width="auto" height="250" /></a>
+			            <img src="image_site/verso012.jpg" alt="danslebeton_livre_mamoste_din" width="250" height="auto" /></a>
 			        </td>
 				
 			    <tr/>					
