--- a/plagiat_ed_corpus_modernité_artistique.html
+++ b/plagiat_ed_corpus_modernité_artistique.html
@@ -2398,7 +2398,9 @@ sur un éloge des minorités agissantes, ou par exemple comme disait Debord sur 
 mais quand même il faut mériter tous les jours de participer à l’entreprise. Donc ce n’est pas un hasard si Debord
 a affublé l’I.S. de l’épithète shakespearien de <i>band of brothers</i>. Et qui peut nier que Debord ait donné, au moins lui,
 						    le bon exemple dans ce domaine&#8239;?</p><span>					
-	<p><span>Les Editions Plagiat, 2022</p>				
+	<p><span>Les Editions Plagiat, 2022 <br>
+	ISBN : 978-2-492221-00-2 
+	E-book édité au printemps 2022</p>				
   </div>
 
   <div class="col-3 col-s-12">
