--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -110,9 +110,6 @@
 					<br><i><a href="https://drive.google.com/uc?id=1kWK3UlQa5LyVa3gLJXJkRWBScxWpNQyv" title="La critique ad mulierem">
 					<u>La critique ad mulierem(.pdf)</i></u><span></p></a>
 						
-				<p><span>CONTRADICTION (groupe américain dont faisait partie Ken Knabb), 
-				    	<br><a href="http://bopsecrets.org/French/hippies.htm" title="De la misère en milieu hippie">
-					<u><i>De la misère en milieu hippie</i></u></a></span></p>
 				<p><span>DEBORD, Guy, 
 					<br><i><a href="https://drive.google.com/uc?id=1w3VZzdOmzCA6krjxgDyNnwUY11gmC5Ar" title="congoPdf">
 					<u>Conditions du mouvement révolutionnaire congolais (.pdf)</u></a>
@@ -151,6 +148,11 @@
 				<p><span>KHAYATI, Mustapha
 					<br><i><a href="https://drive.google.com/uc?id=1ULWox9zKKSiw0Uo9fjH1tKsNFB7RaX5u" title="etudiantPdf">
 				  	<u>De la misère en milieu etudiant (.pdf)</u></a></i></span></p>
+				<p><span>KNABB, Ken (CONTRADICTION groupe américain dont faisait partie Ken Knabb), 
+				    	<br><a href="http://bopsecrets.org/French/hippies.htm" title="De la misère en milieu hippie">
+					<u><i>De la misère en milieu hippie</i></u></a></span></p>
+					<br><i><a href="https://www.bopsecrets.org/French/religion.htm" title="réalisation">
+					<u>La réalisation et la suppression de la religion</i></u></a></span></p>
 				<p><span>KOTANYI, Attila
 					<br><i><a href="https://drive.google.com/uc?id=1-l4FIntu8dwtqf70ju-2NOxtjNClk3cv" title="communePdf">
 					<u>Sur la commune,<br>(et gravure de la commune) (.pdf)</i></u><span></p></a>
@@ -195,8 +197,6 @@
 					<br><a href="https://drive.google.com/uc?id=1Bp2MXb2LxqxRMpznQGUd3di-tr3y3cWq" title="Thèses sur la poésiePdf">
 					<u>Thèses sur la poésie(.pdf)</u></a></i></span></p>
 				<p><span>VOYER, Jean-Pierre,
-					<br><i><a href="https://www.bopsecrets.org/French/religion.htm" title="réalisation">
-					<u>La réalisation et la suppression de la religion</i></u></a>
 					<br><i><a href="https://drive.google.com/uc?id=159TMQ2VdyxESdG9W4mgtmvf3iEg95Fl2" title="Lettre au FHAR (1971)">
 					<u>Lettre au FHAR (1971)(.pdf)</i></u></a>
 					<br><a title="REICH" href="https://www.bopsecrets.org/French/reich.htm">
