--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -150,7 +150,7 @@
 				  	<u>De la misère en milieu etudiant (.pdf)</u></a></i></span></p>
 				<p><span>KNABB, Ken (CONTRADICTION groupe américain dont faisait partie Ken Knabb), 
 				    	<br><a href="http://bopsecrets.org/French/hippies.htm" title="De la misère en milieu hippie">
-					<u><i>De la misère en milieu hippie</i></u></a></span></p>
+					<u><i>De la misère en milieu hippie</i></u></a>
 					<br><i><a href="https://www.bopsecrets.org/French/religion.htm" title="réalisation">
 					<u>La réalisation et la suppression de la religion</i></u></a></span></p>
 				<p><span>KOTANYI, Attila
