--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -151,7 +151,7 @@
 				<p><span>KNABB, Ken (CONTRADICTION groupe américain dont faisait partie Ken Knabb), 
 				    	<br><a href="http://bopsecrets.org/French/hippies.htm" title="De la misère en milieu hippie">
 					<u><i>De la misère en milieu hippie</i></u></a>
-					<br><i><a href="https://www.bopsecrets.org/French/religion.htm" title="réalisation">
+					<br><i><a href="https://drive.google.com/uc?id=1rLeLBIe4p5ZUiqdxeUqj3OHHrRCaI2AZ" title="réalisation">
 					<u>La réalisation et la suppression de la religion</i></u></a></span></p>
 				<p><span>KOTANYI, Attila
 					<br><i><a href="https://drive.google.com/uc?id=1-l4FIntu8dwtqf70ju-2NOxtjNClk3cv" title="communePdf">
@@ -199,7 +199,7 @@
 				<p><span>VOYER, Jean-Pierre,
 					<br><i><a href="https://drive.google.com/uc?id=159TMQ2VdyxESdG9W4mgtmvf3iEg95Fl2" title="Lettre au FHAR (1971)">
 					<u>Lettre au FHAR (1971)(.pdf)</i></u></a>
-					<br><a title="REICH" href="https://www.bopsecrets.org/French/reich.htm">
+					<br><a title="REICH" href="https://drive.google.com/file/d/uc?id=1KeLYKdO8yrc4VfWGdb43swSfPzCMTO7m">
 					<u><i>REICH, Mode d’emploi</i></u></a><span></p>
 						
 					
@@ -236,6 +236,8 @@
 					<a id="une-femme-melancolique" rel="une-femme-melancolique" href="https://www.arte.tv/fr/videos/112991-000-A/une-femme-melancolique/">
 					<u><i>Une femme melancolique</i></u></span></p></a>
 				<p><span>INA,
+				<br><a id="INA" rel="INA" href="https://www.ina.fr/recherche?q=la-france-defiguree" >
+				<u><i>La France défigurée,</i> années 1970, documentaire</u></a></span>		
 				<br><a id="INA" rel="INA" href="https://www.ina.fr/ina-eclaire-actu/video/i11054366/michel-fugain-et-rene-barjavel" >
 				<u><i>Place des Fêtes en rénovation,</i> 1975, documentaire</u></p></a></span>					
 				<p><span>LEAL, Luís Henrique et ZATTi, Caio<br>
