--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -131,6 +131,11 @@
 					<p><span>ENGELS, Friedrich
 					<br><i><a href="https://drive.google.com/uc?id=1yWVwA9wlNV0lxMngI6Irhp-3bBeeZ26p" title="ENGELSPdf">
 				  	<u>L’origine de la famille, de la propriété privée et de l’État(.pdf)</u></a></i></span></p>
+
+				<p><span>GRAMSCI, Antono
+					<br><a href="https://drive.google.com/uc?id=1nFciggwMHdCqeIuML_xdUpGYwlnDIiAC" title="GRAMSCIPdf">
+					<i><u>Je hais les indifférents(.pdf)</i></u></a><span></p>
+						
 				<p><span>I.S., 
 					<i><br><a href="https://drive.google.com/uc?id=1bfq4tlhpQoKXcO9UfbfQQBKjnpj1Xgrr" title="IS n°3,Pdf">
 					<u>N°3(.pdf)</u></a>
