--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -204,7 +204,7 @@
 				<p><span>VOYER, Jean-Pierre,
 					<br><i><a href="https://drive.google.com/uc?id=159TMQ2VdyxESdG9W4mgtmvf3iEg95Fl2" title="Lettre au FHAR (1971)">
 					<u>Lettre au FHAR (1971)(.pdf)</i></u></a>
-					<br><a title="REICH" href="https://drive.google.com/file/d/uc?id=1KeLYKdO8yrc4VfWGdb43swSfPzCMTO7m">
+					<br><a title="REICH" href="https://drive.google.com/uc?id=1KeLYKdO8yrc4VfWGdb43swSfPzCMTO7m">
 					<u><i>REICH, Mode d’emploi</i></u></a><span></p>
 						
 					
