--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -132,6 +132,11 @@
 					<br><i><a href="https://drive.google.com/uc?id=1yWVwA9wlNV0lxMngI6Irhp-3bBeeZ26p" title="ENGELSPdf">
 				  	<u>L’origine de la famille, de la propriété privée et de l’État(.pdf)</u></a></i></span></p>
 
+
+				<p><span>GABEL, Joseph
+					<br><a href="file:///C:/Users/User1/Downloads/resume_HCC_Gabel1.pdf" title="GABELIPdf">
+					<i><u>Esquisse d'une psychopathologie générale fondée sur le concept de réification(.pdf)</i></u></a><span></p>
+						
 				<p><span>GRAMSCI, Antono
 					<br><a href="https://drive.google.com/uc?id=1nFciggwMHdCqeIuML_xdUpGYwlnDIiAC" title="GRAMSCIPdf">
 					<i><u>Je hais les indifférents(.pdf)</i></u></a><span></p>
