--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -134,7 +134,7 @@
 
 
 				<p><span>GABEL, Joseph
-					<br><a href="file:///C:/Users/User1/Downloads/resume_HCC_Gabel1.pdf" title="GABELIPdf">
+					<br><a href="https://drive.google.com/uc?id=15RWnDR_tHOluUBPT697UuCKk5bHzK8aF" title="GABELIPdf">
 					<i><u>Esquisse d'une psychopathologie générale fondée sur le concept de réification(.pdf)</i></u></a><span></p>
 						
 				<p><span>GRAMSCI, Antono
@@ -142,7 +142,7 @@
 					<i><u>Je hais les indifférents(.pdf)</i></u></a><span></p>
 
 				<p><span>HONTE (d'), Jacques
-					<br><a href="file:///C:/Users/User1/Downloads/Teleologie_et_praxis_dans_la_Logique_de_Hegel_-_Jacques_dHondt1.pdf" title="HONTEPdf">
+					<br><a href="https://drive.google.com/uc?id=1fWbKYFxhAvYV-lxysLKeMDQ5B8lFJu1N" title="HONTEPdf">
 					<i><u>Teleologie et praxis dans la Logique de Hegel(.pdf)</i></u></a><span></p>
 						
 				<p><span>I.S., 
