--- a/plagiat_ed_miscellanees_affiches.html
+++ b/plagiat_ed_miscellanees_affiches.html
@@ -91,8 +91,14 @@ Affiches et gravures vues par-ci par-là...</p><span>
 		 <a id="partieune">
 				<img src="image_site/criminalité.jpg" alt="" width="450" height="auto" />
 			</a> 
-	
+	        <a id="partieune">
+				<img src="image_site/cagoule.jpg" alt="" width="450" height="auto" />
+
 		 <a id="partieune">
+				<img src="image_site/tours jumelles.jpg" alt="" width="450" height="auto" />
+			
+		 <a id="partieune">
+			 
 				<img src="image_site/affichetolbiac.jpg" alt="" width="450" height="auto" />
 			</a> 
 
