--- a/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
+++ b/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
@@ -82,7 +82,7 @@
 		  quand il se retrouve happé par une émission de radio 
 		  relatant un braquage mené par deux hommes en trottinette électrique. Un témoin raconte les événements
 incroyables qui se sont déroulés sous ses yeux et l’arrestation des différents protagonistes. Mais ce récit anecdotique, surprenant et burlesque prend une autre dimension
-quand Alberto arrive sur son lieu de travail où il découvre la disparition de deux de ses collègues.</cite><span>
+quand Alberto arrive sur son lieu de travail où il découvre la disparition de deux de ses collègues. Dans le béton est une peinture de la vie quotidienne mêlant critique sociale et absurde.</cite><span>
             <br>
 												<p><b><span>Lors du paiement en ligne, deux possibilités s'offriront à vous.
 							La première sera de payer grâce à votre compte Paypal.
