--- a/plagiat_ed_BD_le_présischtroumpf_détournement.html
+++ b/plagiat_ed_BD_le_présischtroumpf_détournement.html
@@ -91,7 +91,7 @@ Le Présischtroumpf - détournement :
 				<img src="image_site/Le présischtroumpf1.jpg" alt="Le présischtroumpf" width="850" height="auto" />
 			</a> 
          <a id="partie2">
-				<img src="https://drive.google.com/uc?id=1qRpiKwi-p2JKlXzCUh86r9dsHaNrPeui" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/file/uc?id=1qRpiKwi-p2JKlXzCUh86r9dsHaNrPeui" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie3">
 				<img src="https://drive.google.com/uc?id=1qu1Dy1QCPNnJk6Ocbv_-QTmso_eAWBiI" alt="Le présischtroumpf" width="850" height="auto" />
