--- a/plagiat_ed_BD_le_présischtroumpf_détournement.html
+++ b/plagiat_ed_BD_le_présischtroumpf_détournement.html
@@ -94,56 +94,56 @@ Le Présischtroumpf - détournement :
 				<img src="https://lh3.googleusercontent.com/d/1qRpiKwi-p2JKlXzCUh86r9dsHaNrPeui" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie3">
-				<img src="https://drive.google.com/uc?id=1qu1Dy1QCPNnJk6Ocbv_-QTmso_eAWBiI" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1qu1Dy1QCPNnJk6Ocbv_-QTmso_eAWBiI" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
 	 <a id="partie5">
-				<img src="https://drive.google.com/uc?id=1_Hgmlotnup0VGvqIP67B1QPYVK77vxeT" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1_Hgmlotnup0VGvqIP67B1QPYVK77vxeT" alt="Le présischtroumpf" width="850" height="auto" />
 		 </a> 
          <a id="partie4">
-				<img src="https://drive.google.com/uc?id=1ZTOi9uepcJioJtYeZyJ1aOl9qF3TjBYx" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1ZTOi9uepcJioJtYeZyJ1aOl9qF3TjBYx" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>	
 
          <a id="partie6">
-				<img src="https://drive.google.com/uc?id=1OJ01vo-Yz6IjLEjTp-DQO6VZLisELSyo" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1OJ01vo-Yz6IjLEjTp-DQO6VZLisELSyo" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie7">
-				<img src="https://drive.google.com/uc?id=17oE85eTo_qAJeNyNKHNjMGutPAmXQsBQ" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/17oE85eTo_qAJeNyNKHNjMGutPAmXQsBQ" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie8">
-				<img src="https://drive.google.com/uc?id=12OIQsXbrliOdFqygjTi9wSbsrpCFJYG-" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/12OIQsXbrliOdFqygjTi9wSbsrpCFJYG-" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
           <a id="partie9">
-				<img src="https://drive.google.com/uc?id=1AK6NiGOV7O4gWGAifzUBBckDBPMqJgtp" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1AK6NiGOV7O4gWGAifzUBBckDBPMqJgtp" alt="Le présischtroumpf" width="850" height="auto" />
 			</a> 
          <a id="partie10">
-				<img src="https://drive.google.com/uc?id=1v-VlPdIW3Ct95rDepcKdMAWIy5zqC32f" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1v-VlPdIW3Ct95rDepcKdMAWIy5zqC32f" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie11">
-				<img src="https://drive.google.com/uc?id=1NBa0kR8_uQtRdDVfvZzJa-d9_pTWCddz" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1NBa0kR8_uQtRdDVfvZzJa-d9_pTWCddz" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie12">
-				<img src="https://drive.google.com/uc?id=1yFzASe-uh3Jfrfo4n2eIhy8dLxPmVpgz" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1yFzASe-uh3Jfrfo4n2eIhy8dLxPmVpgz" alt="Le présischtroumpf" width="850" height="auto" />
 				
          <a id="partieune">
-				<img src="https://drive.google.com/uc?id=1uWi_iHdXz85FqnHuvv3AVZtf10joCTb3" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1uWi_iHdXz85FqnHuvv3AVZtf10joCTb3" alt="Le présischtroumpf" width="850" height="auto" />
 			</a> 
          <a id="partie2">
-				<img src="https://drive.google.com/uc?id=1rYYR3Ewdn0xjmrminW7YG5gmzkq7jNBY" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1rYYR3Ewdn0xjmrminW7YG5gmzkq7jNBY" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie3">
-				<img src="https://drive.google.com/uc?id=1tbNL-n-j5j57l-XvybI3PsxvmucTLINo" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1tbNL-n-j5j57l-XvybI3PsxvmucTLINo" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie4">
-				<img src="https://drive.google.com/uc?id=1fm9Ki94VXaZSgoRwEgTnuS-I9a4CzLnp" alt="NLe présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1fm9Ki94VXaZSgoRwEgTnuS-I9a4CzLnp" alt="NLe présischtroumpf" width="850" height="auto" />
 			</a>	
           <a id="partie5">
-				<img src="https://drive.google.com/uc?id=1f9NCEfWrUaVmx51p7VNhTO1EWgu0nDl_" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1f9NCEfWrUaVmx51p7VNhTO1EWgu0nDl_" alt="Le présischtroumpf" width="850" height="auto" />
 			</a> 
          <a id="partie6">
-				<img src="https://drive.google.com/uc?id=1jVCvqvjHi04oe91spRSxZOKB_0P1oIPB" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1jVCvqvjHi04oe91spRSxZOKB_0P1oIPB" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie7">
-				<img src="https://drive.google.com/uc?id=1OTsN0rt1RUHyfTR-V_X75VA5cIC6vZoB" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1OTsN0rt1RUHyfTR-V_X75VA5cIC6vZoB" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
 
 
