--- a/plagiat_ed_BD_dans_le_beton.html
+++ b/plagiat_ed_BD_dans_le_beton.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>https://lh3.googleusercontent.com/d/
+<head>
 <title>Editions Plagiat bd/Ne-pas-mourir-comme-des-chiens/mamoste-din</title>  
 <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/d/11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. Dans le Béton, roman graphique, bande dessinée, de Mamoste Dîn, lecture en ligne." />
@@ -122,7 +122,7 @@ quand Alberto arrive sur son lieu de travail où il découvre la disparition de 
 				<img src="https://lh3.googleusercontent.com/d/1ek4FYA4snOcT_RLcMNu2T4OdwKz44tEN" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie14">
-				<img src="hhttps://lh3.googleusercontent.com/d/1FPGacZ_BVHiulBnyI6Mm1G5CO3OUobs8" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://lh3.googleusercontent.com/d/1FPGacZ_BVHiulBnyI6Mm1G5CO3OUobs8" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
           <a id="partie15">
 				<img src="https://lh3.googleusercontent.com/d/1Vc9JDo44nOefmDjx8G9Krdc-ohd4cXHI" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
