--- a/plagiat_ed_histoire_SdS_chap_9.html
+++ b/plagiat_ed_histoire_SdS_chap_9.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Editions Plagiat socle théorique/société du spectacle</title>
-<link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
+<link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/d/11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
 <link rel="stylesheet" href="plagiat_ed_histoire_SdS.css" />
 </head>
@@ -14,7 +14,7 @@
             <tr>
 	                <td width="210" height="175" id="logo">
 			         <a id="logoHome" rel="start home" href="index.html">
-				    <img src="https://drive.google.com/uc?id=12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
+				    <img src="https://lh3.googleusercontent.com/d/12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
 			</a>   
 			        </td>
 				
@@ -150,7 +150,7 @@ L&agrave; seulement o&ugrave; les individus sont &#171;directement li&eacute;s &
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="https://drive.google.com/uc?id=1agZ9cb9ik37v34gX6un0nSbLU4T0bGhj" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://lh3.googleusercontent.com/d/1agZ9cb9ik37v34gX6un0nSbLU4T0bGhj" alt="1937" width="350" height="auto" id="legende"/></a>
     </div>
   </div>
 </div>
