--- a/plagiat_ed_histoire_la_commune.html
+++ b/plagiat_ed_histoire_la_commune.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Editions Plagiat socle théorique/La-Commune</title> 
-<link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
+<link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/d/11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
 <link rel="stylesheet" href="plagiat_ed_histoire_la_commune.css" />
 </head>
@@ -14,7 +14,7 @@
             <tr>
 	                <td width="210" height="175" id="logo">
 			         <a id="logoHome" rel="start home" href="index.html">
-				    <img src="https://drive.google.com/uc?id=12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
+				    <img src="https://lh3.googleusercontent.com/d/12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
 			</a>   
 			        </td>
 				
@@ -128,7 +128,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-       <img src="https://drive.google.com/uc?id=1VZEk22n_Rw5DLu9jaGcg-3kAn6d_E-7D" alt="détournement" width="350" height="auto" id="legende" /></a>
+       <img src="https://lh3.googleusercontent.com/d/1VZEk22n_Rw5DLu9jaGcg-3kAn6d_E-7D" alt="détournement" width="350" height="auto" id="legende" /></a>
     </div>
   </div>
 </div>
