--- a/plagiat_ed_histoire_la_planète_malade.html
+++ b/plagiat_ed_histoire_la_planète_malade.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Editions Plagiat Socle théorique/la planète malade</title>
-<link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
+<link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/d/11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
 <link rel="stylesheet" href="plagiat_ed_histoire_la_planète_malade.css" />
 </head>
@@ -120,7 +120,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-       <img src="https://drive.google.com/uc?id=1I2ann4nGfmd0rL_Z2bRI6dARB0n36KAB" alt="détournement" width="350" height="auto" id="legende" /></a>
+       <img src="https://lh3.googleusercontent.com/d/1I2ann4nGfmd0rL_Z2bRI6dARB0n36KAB" alt="détournement" width="350" height="auto" id="legende" /></a>
     </div>
   </div>
 </div>
