--- a/plagiat_ed_histoire_misère-milieu-étudiants.html
+++ b/plagiat_ed_histoire_misère-milieu-étudiants.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Editions Plagiat socle théorique/misère-milieu-étudiant</title>  
-<link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
+<link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/d/11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
 <link rel="stylesheet" href="plagiat_ed_histoire_misère-milieu-étudiants.css" />
 </head>
@@ -243,7 +243,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-       <img src="https://drive.google.com/uc?id=1UgOEOM_VsmwaJhoQW2906fLD_YCNsXJr" alt="détournements" width="350" height="auto" id="legende" /></a>
+       <img src="https://lh3.googleusercontent.com/d/1UgOEOM_VsmwaJhoQW2906fLD_YCNsXJr" alt="détournements" width="350" height="auto" id="legende" /></a>
     </div>
   </div>
 </div>
