--- a/plagiat_ed_histoire_mouvement_rev_congolais.html
+++ b/plagiat_ed_histoire_mouvement_rev_congolais.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Editions Plagiat socle théorique/Conditions-du-mouvement-révolutionnaire-congolais</title>  
-<link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
+<link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/d/11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
 <link rel="stylesheet" href="plagiat_ed_histoire_mouvement_rev_congolais.css" />
 </head>
@@ -130,7 +130,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-       <img src="https://drive.google.com/uc?id=1NuSfY2J0BAr5WTQMQm2RPEh58Ta0gx4_" alt="détournement" width="350" height="auto" id="legende" /></a>
+       <img src="https://lh3.googleusercontent.com/d/1NuSfY2J0BAr5WTQMQm2RPEh58Ta0gx4_" alt="détournement" width="350" height="auto" id="legende" /></a>
     </div>
   </div>
 </div>
