--- a/plagiat_ed_histoire_protestations-1937.html
+++ b/plagiat_ed_histoire_protestations-1937.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Editions Plagiat socle théorique/1937</title>  
-<link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
+<link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/d/11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. Protestation devant les libertaires du présent et du futur sur les capitulations de 1937, lecture en ligne, et illustrations de Mamoste Dîn" />
 <link rel="stylesheet" href="plagiat_ed_histoire_protestations-1937.css" />
 </head>
@@ -550,7 +550,7 @@ spectacle</i>, thèse 101)<span></p>
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="https://drive.google.com/uc?id=1rSw_PsrfD0bnMAuXP5XUNL4t1PKTHadH" alt="1937" width="350" height="auto" id="illustrationmamostedîn"/></a>
+      <img src="https://lh3.googleusercontent.com/d/1rSw_PsrfD0bnMAuXP5XUNL4t1PKTHadH" alt="1937" width="350" height="auto" id="illustrationmamostedîn"/></a>
     </div>
   </div>
 </div>
