--- a/plagiat_ed_miscellanees_affiches.html
+++ b/plagiat_ed_miscellanees_affiches.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Editions Plagiat Miscellanées - Affiches / Gravures</title> 
-<link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
+<link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/d/11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
 <link rel="stylesheet" href="plagiat_ed_miscellanees_affiches.css" />
 </head>
