--- a/plagiat_ed_index.html
+++ b/plagiat_ed_index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Editions Plagiat index et catalogue</title> 
-<link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
+<link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/d/11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
 <link rel="stylesheet" href="plagiat_ed_index.css" />
 </head>
@@ -118,7 +118,7 @@ et les nouvelles formes d’action dans la politique ou l’art, Sur le passage 
 	                
 	                    <td width="150" id="molotov"><br>
 			                <a id="legende" rel="article" href="https://www.mediamanif.org/">
-			                <img src="https://drive.google.com/uc?id=1zchqrVcM-1DOWRa1GHEYeTQLVJa0Csfv" alt="molotov" width="100" height="auto" /></a>
+			                <img src="https://lh3.googleusercontent.com/d/1zchqrVcM-1DOWRa1GHEYeTQLVJa0Csfv" alt="molotov" width="100" height="auto" /></a>
 			            </td>
 				    
 				    <td width="150" id="camera"><br>
