--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -200,11 +200,13 @@
 				<p><span>OS CANGACEIROS, (groupe) 
 					<br><a href="https://cras31.info/IMG/pdf/oscanga-n01.pdf" title="Os Cangaceiros, revue n°1">
 					<i><u>Os Cangaceiros, revue n°1(.pdf)</i></u></a><span>
-					<br><a href="ps://cras31.info/IMG/pdf/oscanga-n02.pdf" title="Os Cangaceiros, revue n°2">
+					<br><a href="https://cras31.info/IMG/pdf/oscanga-n02.pdf" title="Os Cangaceiros, revue n°2">
 					<i><u>Os Cangaceiros, revue n°2(.pdf)</i></u></a><span>
 					<br><a href="https://cras31.info/IMG/pdf/oscanga-n03.pdf" title="Os Cangaceiros, revue n°3">
 					<i><u>Os Cangaceiros, revue n°3(.pdf)</i></u></a><span></p>
-					
+					<br><a href="https://cras31.info/IMG/pdf/la-domination-industrielle-a520p.pdf" title="la-domination-industrielle">
+					<i><u>La Domestication Industrielle(.pdf)</i></u></a><span></p>	
+
 				<p><span>PANNEKOEK, Anton
 					<br><a href="https://drive.google.com/uc?id=1fiYMiYO4qmG7oaMvZ3LONZkzypq9X9ve" title="BarbariePdf">
 					<i><u>Lettre à Socialisme ou Barbarie(.pdf)</i></u></a><span></p>
