--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -207,7 +207,7 @@
 					<br><a href="https://cras31.info/IMG/pdf/oscanga-n02.pdf" title="Os Cangaceiros, revue n°2">
 					<i><u>Os Cangaceiros, revue n°2(.pdf)</i></u></a><span>
 					<br><a href="https://cras31.info/IMG/pdf/oscanga-n03.pdf" title="Os Cangaceiros, revue n°3">
-					<i><u>Os Cangaceiros, revue n°3(.pdf)</i></u></a><span></p>
+					<i><u>Os Cangaceiros, revue n°3(.pdf)</i></u></a><span>
 					<br><a href="https://cras31.info/IMG/pdf/la-domination-industrielle-a520p.pdf" title="la-domination-industrielle">
 					<i><u>La Domestication Industrielle(.pdf)</i></u></a><span></p>	
 
