--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -308,7 +308,7 @@
 				<a id= "Puisqu'on vous dit que c'est possible" rel= "Puisqu'on vous dit que c'est possible" href="https://www.youtube.com/watch?v=c6-bn8tDrF0">
 					<u><i> "Puisqu'on vous dit que c'est possible"</i></u><br></a>
 				<a id="Sans Soleil" rel="Sans Soleil" href="https://www.youtube.com/watch?v=8FoVj2IbMLs">
-					<u><i>Sans Soleil</i></u></a></p>
+					<u><i>Sans Soleil</i></u></a>
 				<a id="Une Journée d'Andrei Arsenevitch Tarkovski" rel="Une Journée d'Andrei Arsenevitch Tarkovski" href="https://www.youtube.com/watch?v=8FoVj2IbMLs">
 					<u><i>Une Journée d'Andrei Arsenevitch Tarkovski</i></u></a></p>
 				<p><span>MREJEN, Valérie, 
@@ -414,7 +414,7 @@
 						
 					<p><span>
 					<a href="https://drive.google.com/uc?id=1Qz3GS80z7T5xLEVji-hQkz1FIM7u7Ibr" title="gravurespressePdf">
-					<br><i><u>Les gravures de presse de la Commune(.pdf)</u></i></a></span></p>
+					<i><u>Les gravures de presse de la Commune(.pdf)</u></i></a></span></p>
                    
  
 
