--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -342,7 +342,7 @@
 					<a href="https://drive.google.com/uc?id=1FYOFv4rgW5oksImJOhuZWTB_GORQJx8F" title="Pdf">
 					<i><u>Dans le béton de&#8239;Mamoste&#8239;Dîn(.pdf)</u></a>
 					<a href="https://drive.google.com/uc?id=1IJDMCqb5Z2aRoM-MpzzzeRcTengIptag" title="Pdf">
-					<u>Ne pas mourir comme des chiens de&#8239;Mamoste&#8239;Dîn(.pdf)</u></a></i></span></p>
+					<br><u>Ne pas mourir comme des chiens de&#8239;Mamoste&#8239;Dîn(.pdf)</u></a></i></span></p>
 				<p><span>G.R.C. (Groupe Révolutionnaire Charlatan)<br>
 					<a href="https://drive.google.com/uc?id=1DwimdECOTbLcjQQel8ZJhQo1uAEFGAuH" title="Pdf">
 					<span><u><i>Le présischtroumpf -&#8239;détournement(.pdf)</i></u></a><span></p>
