--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -297,7 +297,7 @@
 					<u><i>Chats perchés</i></u><br></a>	
 				<a id="Cuba si" rel="Cuba si" href="https://www.youtube.com/watch?v=gNdsK5WEh_M">
 					<u><i>Cuba si</i></u><br></a>
-				<a id="La Jetée" rel="La Jetée" href="https://www.youtube.com/watch?v=fU99W-ZrIHQ">
+				<a id="La Jetée" rel="La Jetée" href="https://vimeo.com/658254211">
 					<u><i>La Jetée</i></u><br></a>
 				<a id="markerairrouge" rel="markerairrouge" href="https://www.dailymotion.com/video/x11eekv">
 					<u><i>Le fond de l air est rouge, Part I Les mains fragiles, chapitre 1, Du Vietnam à la mort du Che</i></u><br></a>
@@ -309,7 +309,7 @@
 					<u><i>Le fond de l air est rouge, Part II Les mains coupées, chapitre 4 Du Chili à quoi, au fait ?</i></u><br></a>
 				<a id="Le joli mai" rel="Le joli mai" href="https://www.youtube.com/watch?v=aRPXsnSmnvc">
 					<u><i>Le joli mai</i></u><br></a>
-				<a id="LES STATUES MEURENT" rel="Les statues meurent aussi" href="https://vimeo.com/328606733">
+				<a id="LES STATUES MEURENT" rel="Les statues meurent aussi" href="https://www.youtube.com/watch?v=ZzxX5SYU31c">
 					<u><i>Les statues meurent aussi</i></u><br></a>
 				<a id= "Puisqu'on vous dit que c'est possible" rel= "Puisqu'on vous dit que c'est possible" href="https://www.youtube.com/watch?v=c6-bn8tDrF0">
 					<u><i> "Puisqu'on vous dit que c'est possible"</i></u><br></a>
